--- a/style2.css
+++ b/style2.css
@@ -206,49 +206,21 @@ section > div > div > img {
   }
   
   /* Адаптивность */
-  @media (max-width: 800px) {
-    img {
-        width: 500px;
-        height: auto;
+  @media (max-width: 1024px) {
+    .menu-grid {
+      grid-template-columns: repeat(2, 1fr);
     }
   }
-
-  @media (max-width: 600px) {
-      h1 {
-          text-align: center;
-      }
-
-      nav {
-          flex-direction: column;
-          align-items: center;
-      }
-      a {
-          font-size: 20px;
-      }
-
-      h2 {
-          text-align: center;
-      }
-
-      img {
-          width: 100%;
-          height: auto;
-      }
-
-      table {
-          font-size: 14px;
-      }
-  }
-
-  @media (max-width: 400px) {
-      table {
-          font-size: 12px;
-      }
-  }
+  
+  @media (max-width: 768px) {
+    .menu-grid {
+      grid-template-columns: 1fr;
+    }
   
     .menu-item {
       padding: 20px 30px;
     }
+  }
 
   nav a.active {
     color: tomato;
