https://github.com/Pureshca/KvitkinaUliana231-3211Veb

--- a/style.css
+++ b/style.css
@@ -354,7 +354,7 @@ button {
     cursor: pointer;
 }
 
-button[type="reset"] {
+button[type="button"] {
     background-color: #f44336;
     color: white;
 }
