--- a/style2.css
+++ b/style2.css
@@ -354,3 +354,86 @@ button[type="submit"] {
   background-color: #f44336;
   color: white;
 }
+
+
+        /* Grid-контейнер для вариантов ланча */
+        .lunch-options {
+          display: grid;
+          grid-template-columns: repeat(3, 1fr);
+          gap: 20px;
+          margin: 20px 0;
+      }
+
+      /* Карточка каждого варианта ланча */
+      .lunch-card {
+          display: flex;
+          align-items: center;
+          border: 1px solid #ddd;
+          padding: 10px;
+          border-radius: 8px;
+          box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      }
+
+      .lunch-options {
+        display: flex;
+        justify-content: space-around;
+    }
+    
+    .dish {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        width: 80px; /* Задаем фиксированную ширину для каждого блока */
+        width: 100%; /* Увеличьте ширину контейнера до 100% */
+        max-width: 150px; /* Или задайте фиксированную максимальную ширину */
+    }
+    
+    .dish img {
+        width: 50px; /* Задаем одинаковый размер для всех изображений */
+        height: 50px;
+        object-fit: contain; /* Позволяет изображению сохранить пропорции */
+        margin-bottom: 5px; /* Задаем отступ между изображением и текстом */
+    }
+
+    .dish p2 {
+      font-size: 13px;
+    }
+  
+    
+
+      .dish img:hover {
+          transform: translateY(-5px) scale(1.1);
+      }
+
+
+      /* Уведомление */
+      .notification {
+          display: none;
+          position: fixed;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          background-color: #f9f9f9;
+          padding: 20px;
+          border-radius: 8px;
+          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+          z-index: 1000;
+          text-align: center;
+      }
+
+      /* Кнопка закрытия уведомления */
+      .notification button {
+          margin-top: 10px;
+          padding: 5px 15px;
+          background-color: #333;
+          color: white;
+          border: none;
+          cursor: pointer;
+          transition: background-color 0.3s, color 0.3s;
+      }
+
+      .notification button:hover {
+          background-color: white;
+          color: tomato;
+      }
