--- a/style2.css
+++ b/style2.css
@@ -378,10 +378,29 @@ button[type="button"] {
     background-color: #f44336;
     color: white;
 }
-
 button[type="submit"] {
+  background-color: #4caf50;
+  color: white;
+  position: sticky;
+}
+
+button[type="order-button"] {
     background-color: #4caf50;
     color: white;
+    position: sticky;
+}
+
+/* Состояние при наведении (hover) */
+button[type="order-button"]:hover:not(:disabled) {
+  background-color: #45a049; /* Более темный зеленый */
+}
+
+/* Деактивированная кнопка */
+button[type="order-button"]:disabled {
+  background-color: #ccc; /* Серый цвет для неактивной кнопки */
+  color: #888; /* Более светлый текст */
+  cursor: not-allowed; /* Иконка "запрещено" */
+  opacity: 0.7; /* Полупрозрачность */
 }
 
 
@@ -472,4 +491,3 @@ button[type="submit"] {
       .hidden {
         display: none;
     }
-    
